[gd_scene load_steps=13 format=2]

[ext_resource path="res://Bullet.gd" type="Script" id=1]
[ext_resource path="res://DogFightTutorial-master/TrailRenderScriptClass/TrailRender.gd" type="Script" id=2]
[ext_resource path="res://Bulletcurve.tres" type="Curve" id=3]
[ext_resource path="res://boom.tscn" type="PackedScene" id=4]
[ext_resource path="res://rocket/rocket.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.0627452, 0.0625618, 0.0906637 )

[sub_resource type="CapsuleMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_color = Color( 0.898039, 1, 0, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.0440981, 0.0487867, 0.20481 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.156863 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 1, 1, 1, 0.156863 )

[sub_resource type="SphereShape" id=7]
radius = 15.0

[node name="Bullet" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
transform = Transform( 0.0481245, 0, 0, 0, 0.0414882, 0, 0, 0, 0.0680961, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1.48393, 0, 0, 0, 1.21281, 0, 0, 0, 3.0973, 0, 0, 0 )
shape = SubResource( 4 )

[node name="TrailRenderer" type="Spatial" parent="."]
script = ExtResource( 2 )
width_curve = ExtResource( 3 )
exp_max_points = 50
material = SubResource( 5 )

[node name="TrailRenderer2" type="Spatial" parent="."]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )
width_curve = ExtResource( 3 )
exp_max_points = 50
material = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.005
one_shot = true
autostart = true

[node name="explosion_area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="explosion_area"]
shape = SubResource( 7 )

[node name="boom" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0142019, 0 )

[node name="explodie" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="explodie2" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Spatial" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.025, 0, 0, 0, 0.025, 0, 0, 0, 0.025, 0, 0, 0.171205 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="body_entered" from="explosion_area" to="." method="_on_explosion_area_body_entered"]
[connection signal="timeout" from="explodie" to="." method="_on_explodie_timeout"]
[connection signal="timeout" from="explodie2" to="." method="_on_explodie2_timeout"]
